--- a/prework/intro-to-SMACSS/starter-code/styles/style.css
+++ b/prework/intro-to-SMACSS/starter-code/styles/style.css
@@ -1,3 +1,8 @@
+@import 'reset.css';
+@import 'base.css';
+@import 'layout.css';
+@import 'module.css';
+
 @import url('https://fonts.googleapis.com/css?family=Abel|Oswald:700|Yellowtail|Patrick+Hand');
 
 * {
