--- a/prework/intro-to-SMACSS/starter-code/styles/layout.css
+++ b/prework/intro-to-SMACSS/starter-code/styles/layout.css
@@ -1,55 +1,69 @@
-body {
-  background: #fff;
-}
-h2 {
-  margin-top: 50px;
-  font-family: 'Oswald', sans-serif;
-  font-size: 2.5em;
-}
-aside {
-  padding-top: 30px;
-  padding-bottom: 60px
+
+#logo {
+  float: left;
+  padding-bottom: 25px;
+  color: black;
+  text-decoration: none;
 }
 
-aside img {
+#logo img {
   float: left;
 }
 
-aside h3 {
-  padding-left: 100px;
-  font-size: 1.6em;
-  padding-bottom: 10px;
-  color: #555;
+#logo h1 {
+  padding-left: 50px;
+  font-family: 'Yellowtail', cursive;
+  font-size: 2.4em;
 }
 
-aside p {
-  padding-left: 100px;
-  width: 65%;
-  margin: 0;
-  text-indent: 0;
-
-}
-
-aside button {
-  float: right;
+#slogan {
+  width: 250px;
+  padding-left: 55px;
+  color: #a3a4a2;
   font-family: 'Abel', sans-serif;
+  font-size: .65em;
   text-transform: uppercase;
-  padding: 15px 40px;
-  background: #b8705a;
-  color: #fff;
-  font-size: 1.2em;
-  border: none;
 }
 
-section hr {
-  border-bottom: 1px solid #eee;
-  height: 0;
+.print, .date {
+  color: #a9a8a5;
+  font-family: 'Abel', sans-serif;
+  font-size: .8em;
+  margin: 0;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 33px;
+}
+
+.date {
+  float: left;
+}
+
+.print {
+  text-decoration: none;
+  padding-left: 30px;
+  float: right;
+}
+
+.print img {
+  margin-right: 3px;
 }
 
 
-footer section p{
-  padding: 50px 0;
-  line-height: 1.5em;
-  text-align: center;
-  color: #aaa;
+.recipe {
+  letter-spacing: .1em;
+  font-family: 'Patrick Hand', cursive;
+  color: #666a42;
+  background-image: url("img/list-bg.png");
+  height: 260px;
+  padding: 37px 0 0 60px;
+  margin: 40px 0;
 }
+
+.recipe li {
+  float: left;
+  width: 40%;
+  font-size: 1.3em;
+  line-height: 31px;
+}
+
